# hirc-bot

./: .gitignore  Dockerfile  HIRC.hs  README.md  hirc-bot.cabal
model/: arch.dot
src/: Main.hs
src/HIRC/: Parser.hs
